--- a/EmployeeManagementSystem/src/main/resources/templates/pages/status/management.html
+++ b/EmployeeManagementSystem/src/main/resources/templates/pages/status/management.html
@@ -267,15 +267,13 @@
                                 <td th:text="${emp.bandLevel ?: 'N/A'}"></td>
                                 <td>
                                     <span th:if="${emp.salary != null}">
-                                        $<span th:text="${#numbers.formatDecimal(emp.salary, 1, 2)}"></span>
+                                        <span th:text="${#numbers.formatDecimal(emp.salary, 0, 'COMMA', 2, 'POINT')}"></span> MMK
                                     </span>
-                                    <span th:unless="${emp.salary != null}">N/A</span>
                                 </td>
                                 <td>
                                     <span th:if="${emp.netSalary != null}" class="fw-bold text-primary">
-                                        $<span th:text="${#numbers.formatDecimal(emp.netSalary, 1, 2)}"></span>
+                                        <span th:text="${#numbers.formatDecimal(emp.netSalary, 0, 'COMMA', 2, 'POINT')}"></span> MMK
                                     </span>
-                                    <span th:unless="${emp.netSalary != null}">N/A</span>
                                 </td>
                                 <td>
                                     <small class="text-muted">
