--- a/EmployeeManagementSystem/src/main/resources/templates/pages/employee/edit.html
+++ b/EmployeeManagementSystem/src/main/resources/templates/pages/employee/edit.html
@@ -208,7 +208,7 @@
                                 <button type="submit" class="btn btn-primary">
                                     <i class="fas fa-save me-2"></i> Update Employee
                                 </button>
-                                <a th:href="@{/employee/details/{id}(id=${employee.id})}" 
+                                <a th:href="@{/employees/details/{id}(id=${employee.id})}" 
                                    class="btn btn-outline-info">
                                     <i class="fas fa-eye me-2"></i> View Details
                                 </a>
