--- a/EmployeeManagementSystem/src/main/resources/templates/pages/employee/management.html
+++ b/EmployeeManagementSystem/src/main/resources/templates/pages/employee/management.html
@@ -61,7 +61,7 @@
                                 <option value="HRM">HRM</option>
                                 <option value="Technical">Technical</option>
                                 <option value="Design">Design</option>
-                                <option value="Social Media">Social Media</option>
+                                <option value="Finance">Finance</option>
                             </select>
                             <select class="form-select" id="statusFilter">
                                 <option value="">All Status</option>
