--- a/EmployeeManagementSystem/src/main/resources/templates/pages/employee/management.html
+++ b/EmployeeManagementSystem/src/main/resources/templates/pages/employee/management.html
@@ -93,7 +93,7 @@
                         </thead>
                         <tbody>
                             <tr th:each="emp : ${employees}">
-                                <td th:text="'EMP-' + ${emp.id}"></td>
+                                <td th:text="'EMP-' + ${emp.employeeId}"></td>
                                 <td>
                                     <div class="d-flex align-items-center">
                                         <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" 
