employees/details route

--- a/EmployeeManagementSystem/src/main/resources/templates/pages/status/management.html
+++ b/EmployeeManagementSystem/src/main/resources/templates/pages/status/management.html
@@ -292,7 +292,7 @@
                                         class="btn btn-outline-info" title="View Salary">
                                             <i class="fas fa-chart-pie"></i>
                                         </a>
-                                        <a th:href="@{/employee/details/{id}(id=${emp.id})}" 
+                                        <a th:href="@{/employees/details/{id}(id=${emp.id})}" 
                                         class="btn btn-outline-secondary" title="View Details">
                                             <i class="fas fa-eye"></i>
                                         </a>
