--- a/EmployeeManagementSystem/src/main/resources/templates/pages/status/update.html
+++ b/EmployeeManagementSystem/src/main/resources/templates/pages/status/update.html
@@ -268,7 +268,7 @@
                     </div>
                     <div class="card-body">
                         <div class="d-grid gap-2">
-                            <a th:href="@{/employee/details/{id}(id=${employee.id})}" 
+                            <a th:href="@{/employees/details/{id}(id=${employee.id})}" 
                                class="btn btn-outline-info">
                                 <i class="fas fa-eye me-2"></i> View Full Profile
                             </a>
