--- a/EmployeeManagementSystem/src/main/resources/templates/pages/payroll/management.html
+++ b/EmployeeManagementSystem/src/main/resources/templates/pages/payroll/management.html
@@ -63,7 +63,7 @@
         <div class="card mb-4">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-5">
                         <form th:action="@{/employees/search}" method="get">
                             <div class="input-group">
                                 <input type="text" 
@@ -76,6 +76,7 @@
                             </div>
                         </form>
                     </div>
+                    <div class="col-md-3"></div>
                     <div class="col-md-4">
                         <div class="filter-buttons">
                             <div class="btn-group w-100" role="group">
